--- a/src/com/scoremgm/실습2_성적관리프로그램 요구사항.md
+++ b/src/com/scoremgm/실습2_성적관리프로그램 요구사항.md
@@ -63,3 +63,13 @@
 국어: 90, 영어: 85, 수학: 95<br>
 총점: 270, 평균: 90.0, 등급: A<br>
 <br>
+
+### 참고사항
+	- 람다식 표현인 forEach는 메소드 호출이므로 스택에 새로우 블록으로 생성되어 실행됨
+	- 이전에 실행중이던 find가 중지되고 forEach로 주도권이 넘어와 member 변수 사용불가..
+	- storage.forEach((m) -> {	
+			if(m.getNo().equals(no)) {
+				member = m;	// member 참조 불가
+			}
+		});	
+		
