--- a/src/com/bookmgm/실습_도서관리프로그램 요구사항.md
+++ b/src/com/bookmgm/실습_도서관리프로그램 요구사항.md
@@ -19,7 +19,7 @@ com.bookmgm
 
 ### 2. 출력 결과 시나리오
 <br>
-===== 학생 성적 관리 시스템 =====<br>
+===== 도서 관리 시스템 =====<br>
 1. 도서 등록<br>
 2. 도서 목록 조회<br>
 3. 도서 검색<br>
@@ -38,7 +38,9 @@ com.bookmgm
 [1234] 자바프로그래밍 - 남궁성,  30000 <br>
 <br>
 
-
+### 3. 유지보수 요청사항
+	- 추가된 저장소를 생성하고, 도서 등록 전 체크 후 진행한다.
+	- 예스 24, 알라딘 ,,,
 
 
 
