--- a/src/com/bookmgm/실습_도서관리프로그램 요구사항.md
+++ b/src/com/bookmgm/실습_도서관리프로그램 요구사항.md
@@ -5,17 +5,15 @@
 	com.bookmgm
 	
 	├── model<br>
-	│   └── Book.java                   // 도서 도메인 모델<br>
+	│   └── Book.java                   	// 도서 도메인 모델
 	├── service<br>
-	│   ├── BookService.java           // 서비스 인터페이스<br>
-	│   └── DefaultBookService.java    // 서비스 구현체<br>
+	│   ├── BookService.java           		// 서비스 인터페이스
+	│   └── DefaultBookService.java    		// 서비스 구현체
 	├── repository<br>
-	│   ├── BookRepository.java        	// 저장소 인터페이스<br>
-	│   └── InMemoryBookRepository.java	// 메모리 저장소 구현체<br>
+	│   ├── BookRepository.java        		// 저장소 인터페이스
+	│   └── InMemoryBookRepository.java		// 메모리 저장소 구현체
 	├── application<br>
-	│   └── BookManagementApplication.java // 메인 실행 클래스<br>
-
-<br>
+	│   └── BookManagementApplication.java 	// 메인 실행 클래스
 
 ### 2. 출력 결과 시나리오
 <br>
@@ -41,17 +39,3 @@
 ### 3. 유지보수 요청사항
 	- 추가된 저장소를 생성하고, 도서 등록 전 체크 후 진행한다.
 	- 예스24 도서관, 알라딘 도서관 두 곳이 추가됨
-
-
-
-
-
-
-
-
-
-
-
-
-
-
