--- a/src/com/bookmgm/실습_도서관리프로그램 요구사항.md
+++ b/src/com/bookmgm/실습_도서관리프로그램 요구사항.md
@@ -16,6 +16,7 @@
 	│   └── BookManagementApplication.java 	// 메인 실행 클래스
 
 ### 2. 출력 결과 시나리오
+<br>
 ===== 도서 관리 시스템 =====<br>
 1. 도서 등록<br>
 2. 도서 목록 조회<br>
@@ -32,7 +33,7 @@
 ✅ 도서가 등록되었습니다.<br><br>
 >> 메뉴 선택: 2<br>
 [도서 목록 조회]<br>
-[1234] 자바프로그래밍 - 남궁성,  30000 <br>
+[1234] 자바프로그래밍 - 서민구,  30000 <br>
 <br>
 
 ### 3. 유지보수 요청사항
